# Bridge-Plus

./: .build-number  .gitignore  .gitmodules  AGENTS.md  BINARY_LICENSE.md  CHANGELOG.md  LICENSE  NOTICE.md  README.md  SETUP-GUIDE.md  THIRD_PARTY_NOTICES.md  bridge-clone.js  bridge-core.js  libArtnet.dylib  libLTC.dylib  libavutil.59.dylib  libswscale.8.dylib  libvulkan.1.dylib  license-service.js  main.js  package-lock.json  package.json  preload.js  verify-packets.js
.github/: FUNDING.yml
bridge/: beat-anchor.js  dbserver-client.js  dbserver-orchestrator.js  dbserver-pool.js  network-helpers.js  tcnet-handler.js  tcnet-sender.js  virtual-deck.js
docs/: MODULARIZATION_PLAN.md  PRO_DJ_LINK_IMPLEMENTATION.md  PRO_DJ_LINK_INDEX.md  PRO_DJ_LINK_PACKET_BYTE_OFFSETS.md  PRO_DJ_LINK_PROTOCOL_REFERENCE.md  PRO_DJ_LINK_README.md  deepsymmetry-packets.md  deepsymmetry-track-metadata.md  design-proposal.html  pdjl-protocol-reference.md
graphify-out/: .graphify_ast.json  .graphify_cached.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json  .graphify_detect.json  .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
juce-app/: CMakeLists.txt
juce-app/src/: BridgeEngine.cpp  BridgeEngine.h  DeckState.h  Main.cpp  MainComponent.cpp  MainComponent.h  NetworkEngine.cpp  NetworkEngine.h  ProDJLink.cpp  ProDJLink.h  TCNetSender.cpp  TCNetSender.h  VirtualDeck.cpp  VirtualDeck.h  WaveformComponent.cpp  WaveformComponent.h
(+77 files in other folders)
